# logged-stream

./: CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  RELEASE.md  rustfmt.toml
.github/: dependabot.yml  labeler.yml
.github/workflows/: cache-clean.yml  check.yml  docs.yml  labeler.yml  master-stale-cache-clean.yml  prs-cache-clean.yml
benches/: buffer-formatter.rs  filter.rs
examples/: composite-filters.rs  file-logger.rs  tcp-stream-console-logger.rs  tokio-tcp-stream-console-logger.rs
src/: buffer_formatter.rs  filter.rs  lib.rs  logger.rs  record.rs  stream.rs
