[package]
name = "logged-stream"
version = "0.3.5"
edition = "2021"
authors = ["Alexandr Garbuzov <qwerty541zxc@gmail.com>"]
description = "This Rust library provides a wrapper for io objects like `std::net::TcpStream` to enable logging of all read and write operations, errors and drop."
keywords = ["io", "logging", "async", "network"]
categories = [
    "asynchronous",
    "data-structures",
    "development-tools::debugging",
    "network-programming"
]
license = "MIT OR Apache-2.0"
repository = "https://github.com/qwerty541/logged-stream"
homepage = "https://github.com/qwerty541/logged-stream"
documentation = "https://docs.rs/logged-stream"
readme = "README.md"
rust-version = "1.63.0"
exclude = [".github", ".vscode", "examples", ".gitignore", "rustfmt.toml"]

[dependencies]
chrono = "0.4.34"
itertools = "0.13.0"
log = "0.4.20"
tokio = { version = "1.36.0", features = ["io-util"], default-features = false }

[dev-dependencies]
env_logger = "0.10.1"
tokio = { version = "1.36.0", features = [
    "macros",
    "net",
    "rt-multi-thread"
], default-features = false }
