[package]
name = "logged-stream"
version = "0.3.5"
edition = "2021"
authors = ["Alexandr Garbuzov <qwerty541zxc@gmail.com>"]
description = "Logging of all read/write operations, errors and drop of underlying IO object."
keywords = ["io", "logging", "async", "network"]
categories = [
    "asynchronous",
    "data-structures",
    "development-tools::debugging",
    "network-programming"
]
license = "MIT OR Apache-2.0"
repository = "https://github.com/qwerty541/logged-stream"
homepage = "https://github.com/qwerty541/logged-stream"
documentation = "https://docs.rs/logged-stream"
readme = "README.md"
rust-version = "1.63.0"
include = ["src/**/*", "Cargo.toml", "CHANGELOG.md", "LICENSE-*", "README.md"]

[dependencies]
chrono = "0.4.38"
itertools = "0.13.0"
log = "0.4.21"
tokio = { version = "1.38.0", features = ["io-util"], default-features = false }

[dev-dependencies]
criterion = "0.5.1"
env_logger = "0.10.1"
tokio = { version = "1.38.0", features = [
    "macros",
    "net",
    "rt-multi-thread"
], default-features = false }

[[example]]
name = "tcp-stream-console-logger"
path = "examples/tcp-stream-console-logger.rs"

[[example]]
name = "tokio-tcp-stream-console-logger"
path = "examples/tokio-tcp-stream-console-logger.rs"

[[example]]
name = "file-logger"
path = "examples/file-logger.rs"

[[bench]]
name = "buffer-formatter"
path = "benches/buffer-formatter.rs"
harness = false

[[bench]]
name = "filter"
path = "benches/filter.rs"
harness = false
